--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,27 @@
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/museo-slab-500.css" />
 
+    <link rel="stylesheet" href="/js/codemirror/codemirror.css" />
+    <link rel="stylesheet" href="/js/codemirror/default.css" />
+
+    <script src="/js/codemirror/codemirror.js" type="text/javascript"></script>
+    <script src="/js/codemirror/xml.js" type="text/javascript"></script>
+    <script src="/js/codemirror/css.js" type="text/javascript"></script>
+    <script src="/js/codemirror/javascript.js" type="text/javascript"></script>
+    <script src="/js/codemirror/htmlmixed.js" type="text/javascript"></script>
+
     <script src="/js/underscore-min.js" type="text/javascript"></script>
     <script src="/js/jquery.min.js" type="text/javascript"></script>
+    <script src="/js/showdown.js" type="text/javascript"></script>
     <script src="/js/angular-0.9.18.min.js" type="text/javascript" ng:autobind></script>
+
+    <style type="text/css">
+      .CodeMirror-scroll {
+        height: auto;
+        overflow-y: hidden;
+        overflow-x: auto;
+      }
+    </style>
   </head>
   <body my:left="previousSlide()" my:right="nextSlide()">
     <ng:include src="template()"></ng:include>
