--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     </style>
   </head>
   <body my:left="previousSlide()" my:right="nextSlide()">
-    <ng:include src="template()"></ng:include>
+    <ng:view></ng:view>
     <script src="/js/slides.js" type="text/javascript"></script>
   </body>
 </html>
