--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/js/codemirror/default.css" />
 
     <script src="/js/codemirror/codemirror.js" type="text/javascript"></script>
+    <script src="/js/codemirror/runmode.js" type="text/javascript"></script>
     <script src="/js/codemirror/xml.js" type="text/javascript"></script>
     <script src="/js/codemirror/css.js" type="text/javascript"></script>
     <script src="/js/codemirror/javascript.js" type="text/javascript"></script>
